Added Sam's name to the top

--- a/course-notes/qgis/qgis_training.html
+++ b/course-notes/qgis/qgis_training.html
@@ -43,7 +43,7 @@ pre, code { font-family: monospace }
 
 <DIV CLASS="header" ID="header">
 <H1>QGIS Training Course</H1>
-<H3>Tim Sutton, 2010</h3><a href="#toc">Back to the contents list</a>
+<H3>Tim Sutton and Samantha Lee Pan, 2010</h3><a href="#toc">Back to the contents list</a>
 </DIV>
 
 <DIV CLASS="toc" ID="toc">
