--- a/course-notes/openlayers/html/2-openstreetmap.html
+++ b/course-notes/openlayers/html/2-openstreetmap.html
@@ -8,7 +8,7 @@
                 height: 512px;
             }
         </style>
-        <script src="openlayers/lib/OpenLayers.js"></script>
+        <script src="openlayers/OpenLayers.js"></script>
     </head>
     <body>
         <h1>The world according to Tim</h1>
