--- a/course-notes/openlayers/html/3-bing.html
+++ b/course-notes/openlayers/html/3-bing.html
@@ -8,7 +8,7 @@
                 height: 512px;
             }
         </style>
-        <script src="openlayers/lib/OpenLayers.js"></script>
+        <script src="openlayers/OpenLayers.js"></script>
         <script src="http://ecn.dev.virtualearth.net/mapcontrol/mapcontrol.ashx?v=6.2&mkt=en-us"></script>
 
     </head>
