--- a/course-notes/openlayers/html/4-projection.html
+++ b/course-notes/openlayers/html/4-projection.html
@@ -8,7 +8,7 @@
                 height: 256px;
             }
         </style>
-        <script src="openlayers/lib/OpenLayers.js"></script>
+        <script src="openlayers/OpenLayers.js"></script>
 
     </head>
     <body>
@@ -34,8 +34,11 @@
 
             var imagery = new OpenLayers.Layer.WMS(
                 "Country",
-                "http://localhost/cgi-bin/mapserv?map=/home/web/mapserver/mapfiles/world.map",
-                {layers: "Country,Cities", format : "image/png; mode=24bit"}
+                "http://196.35.94.243/cgi-bin/mapserv?map=ZA_SPOT10m2010",
+                {layers: "Country", format : "image/jpeg"}
+                //"Country",
+                //"http://localhost/cgi-bin/mapserv?map=/home/web/mapserver/mapfiles/world.map",
+                //{layers: "Country,Cities", format : "image/png; mode=24bit"}
             );
             map.addLayer(imagery);
             map.setCenter(gabs, 9);
