--- a/course-notes/openlayers/html/1-simple.html
+++ b/course-notes/openlayers/html/1-simple.html
@@ -1,32 +1,32 @@
 <html>
-    <head>
-        <title>Tims Map</title>
-        <link rel="stylesheet" href="openlayers/theme/default/style.css" type="text/css">
-        <style>
-            #map-id {
-                width: 512px;
-                height: 512px;
-            }
-        </style>
-        <script src="openlayers/OpenLayers.js"></script>
-    </head>
-    <body>
-        <h1>The world according to Tim</h1>
-        <div id="map-id"></div>
-        <script>
-            var map = new OpenLayers.Map("map-id");
-            var imagery = new OpenLayers.Layer.WMS(
-                "Country",
-                "http://196.35.94.243/cgi-bin/mapserv?map=ZA_SPOT10m2010",
-                {layers: "Country", format : "image/jpeg"}
-                //"http://localhost/cgi-bin/mapserv?map=/home/web/mapserver/mapfiles/world.map",
-                //{layers: "Country,Cities", format : "image/png; mode=24bit"}
-            );
-
-            map.addLayer(imagery);
-            map.zoomToMaxExtent();
-        </script>
-        <input type="button" onclick="map.setCenter(new OpenLayers.LonLat(25,-24), 7 );" value="Go To Boche's House" />
-    </body>
+  <head>
+    <title>Tim's Map</title>
+    <link rel="stylesheet" href="openlayers/theme/default/style.css" type="text/css" />
+    <style>
+      #map-id {
+        width: 512px;
+        height: 512px;
+      }
+    </style>
+    <script src="openlayers/OpenLayers.js"></script>
+  </head>
+  <body>
+    <h1>The world according to Tim</h1>
+    <div id="map-id"></div>
+    <script>
+      var map = new OpenLayers.Map("map-id");
+      var imagery = new OpenLayers.Layer.WMS(
+        //sansa map
+        //"Country",
+        //"http://196.35.94.243/cgi-bin/mapserv?map=ZA_SPOT10m2010",
+        //{layers: "Spot5_RSA_2010_10m", format : "image/jpeg"}
+        // Or with our own map:
+        "Country",
+        "http://localhost/cgi-bin/mapserv?map=/home/web/mapserver/mapfiles/world.map",
+        {layers: "Country,Cities", format : "image/png; mode=24bit"}
+      );
+      map.addLayer(imagery);
+      map.zoomToMaxExtent();
+    </script>
+  </body>
 </html>
-
