Added scalebar sections

--- a/course-notes/openlayers/html/10-scalebar.html
+++ b/course-notes/openlayers/html/10-scalebar.html
@@ -73,13 +73,18 @@
       map.addLayer(pointlayer);
 
       map.zoomToMaxExtent();
-      
+      map.addControl(new OpenLayers.Control.LayerSwitcher());
+      var scaleline = new OpenLayers.Control.ScaleLine({
+        div: document.getElementById("scaleline-id")
+      });
+      map.addControl(scaleline); 
      }
     </script>
   </head>
   <body onload="init()">
     <h1>My Map</h1>
     <div id="map-id"></div>
+    <div id="scaleline-id"></div>
   </body>
 </html>
 
