--- a/course-notes/openlayers/html/9-layerselector.html
+++ b/course-notes/openlayers/html/9-layerselector.html
@@ -73,7 +73,7 @@
       map.addLayer(pointlayer);
 
       map.zoomToMaxExtent();
-      
+      map.addControl(new OpenLayers.Control.LayerSwitcher());
      }
     </script>
   </head>
